test-workloads/redhat-lab/redhat-lab-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: redhat-lab
  labels:
    app.kubernetes.io/part-of: redhat-lab
